WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
31164
[Qt] [DRT] Fix wrong logic in LayoutTestController processWork
https://bugs.webkit.org/show_bug.cgi?id=31164
Summary
[Qt] [DRT] Fix wrong logic in LayoutTestController processWork
Antonio Gomes
Reported
2009-11-05 05:02:23 PST
Qt's DRT logic for processing the WorkQueue is working differently from other DRT ports (e.g. mac, gtk and win): void LayoutTestController::processWork() (..) if (!WorkQueue::shared()->processWork() && !shouldWaitUntilDone()) { emit done(); notice the first "!". It makes queue processing stop when if should proceed ('true' here means that queue is done and we are ok to finish).
Attachments
(committed in r50622) patch
(2.11 KB, patch)
2009-11-05 05:09 PST
,
Antonio Gomes
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antonio Gomes
Comment 1
2009-11-05 05:03:01 PST
for reference: GTK: static gboolean processWork(void* data) { // if we finish all the commands, we're ready to dump state if (WorkQueue::shared()->processWork() && !gLayoutTestController->waitToDump()) dump(); WIN: void FrameLoadDelegate::processWork() { (...) // if we finish all the commands, we're ready to dump state if (WorkQueue::shared()->processWork() && !::gLayoutTestController->waitToDump()) dump(); MAC: - (void)processWork:(id)dummy { (...) // if we finish all the commands, we're ready to dump state if (WorkQueue::shared()->processWork() && !gLayoutTestController->waitToDump()) dump();
Antonio Gomes
Comment 2
2009-11-05 05:09:53 PST
Created
attachment 42560
[details]
(committed in
r50622
) patch patch make LayoutTestController::proccessWork to dump whole if WorkQueue returns 'true' it makes qt compliant to other drt's (mac, win, gtk)
Holger Freyther
Comment 3
2009-11-07 00:32:56 PST
Comment on
attachment 42560
[details]
(committed in
r50622
) patch Seems plausible.
Antonio Gomes
Comment 4
2009-11-08 09:27:46 PST
r50622
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug