[Qt] [DRT] Fix wrong logic in LayoutTestController processWork https://bugs.webkit.org/show_bug.cgi?id=31164

Patch by Antonio Gomes <tonikitoo@webkit.org> on 2009-11-05
Reviewed by Holger Freyther.

Fixed wrong logic to assume WorkQueue is done in QT's DRT.

* DumpRenderTree/qt/LayoutTestControllerQt.cpp:
(LayoutTestController::processWork):

Canonical link: https://commits.webkit.org/42052@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50622 268f45cc-cd09-0410-ab3c-d52691b4dbfc